// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders project-specific labels 1`] = `
<tbody>
  <tr
    key="type1"
  >
    <td>
      notification.dispatcher.type1.project
    </td>
    <td
      className="text-center"
      key="channel1"
    >
      <Checkbox
        checked={true}
        id="checkbox-io-type1-channel1"
        onCheck={[Function]}
        thirdState={false}
      />
    </td>
    <td
      className="text-center"
      key="channel2"
    >
      <Checkbox
        checked={false}
        id="checkbox-io-type1-channel2"
        onCheck={[Function]}
        thirdState={false}
      />
    </td>
  </tr>
  <tr
    key="type2"
  >
    <td>
      notification.dispatcher.type2.project
    </td>
    <td
      className="text-center"
      key="channel1"
    >
      <Checkbox
        checked={true}
        id="checkbox-io-type2-channel1"
        onCheck={[Function]}
        thirdState={false}
      />
    </td>
    <td
      className="text-center"
      key="channel2"
    >
      <Checkbox
        checked={true}
        id="checkbox-io-type2-channel2"
        onCheck={[Function]}
        thirdState={false}
      />
    </td>
  </tr>
</tbody>
`;

exports[`should match snapshot 1`] = `
<tbody>
  <tr
    key="type1"
  >
    <td>
      notification.dispatcher.type1
    </td>
    <td
      className="text-center"
      key="channel1"
    >
      <Checkbox
        checked={true}
        id="checkbox-io-type1-channel1"
        onCheck={[Function]}
        thirdState={false}
      />
    </td>
    <td
      className="text-center"
      key="channel2"
    >
      <Checkbox
        checked={false}
        id="checkbox-io-type1-channel2"
        onCheck={[Function]}
        thirdState={false}
      />
    </td>
  </tr>
  <tr
    key="type2"
  >
    <td>
      notification.dispatcher.type2
    </td>
    <td
      className="text-center"
      key="channel1"
    >
      <Checkbox
        checked={true}
        id="checkbox-io-type2-channel1"
        onCheck={[Function]}
        thirdState={false}
      />
    </td>
    <td
      className="text-center"
      key="channel2"
    >
      <Checkbox
        checked={true}
        id="checkbox-io-type2-channel2"
        onCheck={[Function]}
        thirdState={false}
      />
    </td>
  </tr>
</tbody>
`;
